OnboardingV2Minimal/force-app/main/default/objects/Related_List_Order_Allowlist__mdt/Related_List_Order_Allowlist__mdt.object-meta.xml
<CustomObject>
    <description>Strict allowlist for dynamic ORDER BY fields used by ObjectRelatedListController.</description>
    <label>Related List Order Allowlist</label>
    <pluralLabel>Related List Order Allowlists</pluralLabel>
</CustomObject>