OnboardingV2Minimal/force-app/main/default/objects/Related_List_Order_Allowlist__mdt/fields/Order_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Order_Field_Path__c</fullName>
    <description>Exact field path allowed in ORDER BY (for example LastName or Parent.Requirement_Type__c).</description>
    <label>Order Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>