OnboardingV2Minimal/force-app/main/default/objects/Related_List_Order_Allowlist__mdt/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>API name of the queried object for this allowlist row.</description>
    <label>Target Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>