OnboardingV2Minimal/force-app/main/default/objects/Related_List_Order_Allowlist__mdt/fields/Usage_Context__c.field-meta.xml
<CustomField>
    <fullName>Usage_Context__c</fullName>
    <description>Controller entry point context where this order field is permitted.</description>
    <label>Usage Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RelatedRecords</fullName>
                <default>true</default>
                <label>RelatedRecords</label>
            </value>
            <value>
                <fullName>LookupOptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>